Fix table cell wrapping in Chrome

--- a/assets/styles/less/patterns.less
+++ b/assets/styles/less/patterns.less
@@ -150,6 +150,7 @@ img.pull-right {
         }
         td, th {
             padding: 0;
+            white-space: nowrap;
         }
         th {
             font-size: 1em;
